Remove a bunch of dead code
I left this code along in my uber patch to remove the DOM and CSS, but it's
just as dead. Also, move lone files out of dead directories into more sensible
places.

--- a/engine/src/flutter/sky/engine/core/core.gni
+++ b/engine/src/flutter/sky/engine/core/core.gni
@@ -27,10 +27,6 @@ sky_core_files = [
   "editing/CompositionUnderline.h",
   "editing/CompositionUnderlineRangeFilter.cpp",
   "editing/CompositionUnderlineRangeFilter.h",
-  "editing/EditingBoundary.h",
-  "editing/FindOptions.h",
-  "editing/TextAffinity.h",
-  "editing/TextGranularity.h",
   "events/Event.cpp",
   "events/Event.h",
   "events/EventSender.h",
@@ -44,35 +40,6 @@ sky_core_files = [
   "events/VelocityTracker.h",
   "events/WheelEvent.cpp",
   "events/WheelEvent.h",
-  "frame/ConsoleTypes.h",
-  "frame/Frame.cpp",
-  "frame/Frame.h",
-  "frame/FrameClient.h",
-  "frame/FrameOwner.h",
-  "frame/Tracing.cpp",
-  "frame/Tracing.h",
-  "html/parser/HTMLParserIdioms.cpp",
-  "html/parser/HTMLParserIdioms.h",
-  "html/VoidCallback.h",
-  "inspector/ConsoleAPITypes.h",
-  "inspector/ConsoleMessage.cpp",
-  "inspector/ConsoleMessage.h",
-  "inspector/IdentifiersFactory.cpp",
-  "inspector/IdentifiersFactory.h",
-  "inspector/InspectorCounters.cpp",
-  "inspector/InspectorCounters.h",
-  "inspector/ScriptAsyncCallStack.cpp",
-  "inspector/ScriptAsyncCallStack.h",
-  "inspector/ScriptCallFrame.cpp",
-  "inspector/ScriptCallFrame.h",
-  "inspector/ScriptCallStack.cpp",
-  "inspector/ScriptCallStack.h",
-  "loader/CanvasImageDecoder.cpp",
-  "loader/CanvasImageDecoder.h",
-  "loader/ImageDecoderCallback.h",
-  "loader/NavigationPolicy.h",
-  "loader/UniqueIdentifier.cpp",
-  "loader/UniqueIdentifier.h",
   "painting/Canvas.cpp",
   "painting/Canvas.h",
   "painting/CanvasColor.cpp",
@@ -81,6 +48,8 @@ sky_core_files = [
   "painting/CanvasGradient.h",
   "painting/CanvasImage.cpp",
   "painting/CanvasImage.h",
+  "painting/CanvasImageDecoder.cpp",
+  "painting/CanvasImageDecoder.h",
   "painting/CanvasPath.cpp",
   "painting/CanvasPath.h",
   "painting/ColorFilter.cpp",
@@ -92,6 +61,7 @@ sky_core_files = [
   "painting/DrawLooperLayerInfo.cpp",
   "painting/DrawLooperLayerInfo.h",
   "painting/FilterQuality.h",
+  "painting/ImageDecoderCallback.h",
   "painting/ImageShader.cpp",
   "painting/ImageShader.h",
   "painting/LayerDrawLooperBuilder.cpp",
@@ -111,12 +81,12 @@ sky_core_files = [
   "painting/PictureRecorder.h",
   "painting/Point.cpp",
   "painting/Point.h",
+  "painting/Rect.cpp",
+  "painting/Rect.h",
   "painting/RRect.cpp",
   "painting/RRect.h",
   "painting/RSTransform.cpp",
   "painting/RSTransform.h",
-  "painting/Rect.cpp",
-  "painting/Rect.h",
   "painting/Shader.cpp",
   "painting/Shader.h",
   "painting/Size.cpp",
@@ -277,8 +247,11 @@ sky_core_files = [
   "text/ParagraphBuilder.h",
   "view/EventCallback.h",
   "view/FrameCallback.h",
+  "view/Tracing.cpp",
+  "view/Tracing.h",
   "view/View.cpp",
   "view/View.h",
+  "view/VoidCallback.h",
 ]
 
 core_idl_files = get_path_info([
@@ -290,10 +263,6 @@ core_idl_files = get_path_info([
                                  "events/PointerEvent.idl",
                                  "events/VelocityTracker.idl",
                                  "events/WheelEvent.idl",
-                                 "frame/Tracing.idl",
-                                 "html/VoidCallback.idl",
-                                 "loader/ImageDecoder.idl",
-                                 "loader/ImageDecoderCallback.idl",
                                  "painting/Canvas.idl",
                                  "painting/ColorFilter.idl",
                                  "painting/Drawable.idl",
@@ -301,6 +270,8 @@ core_idl_files = get_path_info([
                                  "painting/DrawLooperLayerInfo.idl",
                                  "painting/Gradient.idl",
                                  "painting/Image.idl",
+                                 "painting/ImageDecoder.idl",
+                                 "painting/ImageDecoderCallback.idl",
                                  "painting/ImageShader.idl",
                                  "painting/LayerDrawLooperBuilder.idl",
                                  "painting/MaskFilter.idl",
@@ -313,7 +284,9 @@ core_idl_files = get_path_info([
                                  "text/ParagraphBuilder.idl",
                                  "view/EventCallback.idl",
                                  "view/FrameCallback.idl",
+                                 "view/Tracing.idl",
                                  "view/View.idl",
+                                 "view/VoidCallback.idl",
                                ],
                                "abspath")
 
@@ -324,12 +297,12 @@ core_dart_files = get_path_info([
                                   "dart/text.dart",
                                   "dart/view.dart",
                                   "dart/window.dart",
-                                  "loader/ImageDecoder.dart",
                                   "painting/Color.dart",
                                   "painting/ColorFilter.dart",
                                   "painting/DrawLooperLayerInfo.dart",
                                   "painting/FilterQuality.dart",
                                   "painting/Gradient.dart",
+                                  "painting/ImageDecoder.dart",
                                   "painting/ImageShader.dart",
                                   "painting/MaskFilter.dart",
                                   "painting/Offset.dart",
