Start booting up the new binding system for window
Currently this code isn't completely wired up, but this patch is an incremental
step in that direction.

--- a/engine/src/flutter/sky/engine/core/core.gni
+++ b/engine/src/flutter/sky/engine/core/core.gni
@@ -252,6 +252,8 @@ sky_core_files = [
   "view/View.cpp",
   "view/View.h",
   "view/VoidCallback.h",
+  "window/window.cc",
+  "window/window.h",
 ]
 
 core_idl_files = get_path_info([
