--- a/engine/src/flutter/sky/packages/flx/pubspec.yaml
+++ b/engine/src/flutter/sky/packages/flx/pubspec.yaml
@@ -4,7 +4,7 @@ author: Flutter Authors <flutter-dev@googlegroups.com>
 description: Library for dealing with Flutter bundle (.flx) files
 homepage: http://flutter.io
 dependencies:
-  sky_services: 0.0.38
+  sky_services: ^0.0.40
   yaml: ^2.1.3
   asn1lib: ^0.4.1
   cipher: ^0.7.1
