--- a/engine/src/flutter/sky/packages/updater/pubspec.yaml
+++ b/engine/src/flutter/sky/packages/updater/pubspec.yaml
@@ -6,13 +6,14 @@ homepage: http://flutter.io
 dependencies:
   mojo: 0.3.0
   flutter: ">=0.0.3 <0.1.0"
-  sky_services: any
-  path: any
-  yaml: any
-  cipher: any
-  asn1lib: any
+  sky_services: ^0.0.40
+  yaml: ^2.1.3
+  path: ^1.3.0
+  flx: 0.0.1
 dependency_overrides:
   flutter:
     path: ../sky
+  flx:
+    path: ../flx
 environment:
   sdk: '>=1.12.0 <2.0.0'
