--- a/engine/src/flutter/sky/engine/config.gni
+++ b/engine/src/flutter/sky/engine/config.gni
@@ -8,7 +8,7 @@ if (is_android) {
   import("//build/config/android/config.gni")
 }
 
-if (target_cpu == "arm") {
+if (target_cpu == "arm" || target_cpu == "arm64") {
   import("//build/config/arm.gni")
 } else {
   # TODO(brettw) remove this once && early-out is checked in.
