simplify the ImageDecoder native code binding

--- a/engine/src/flutter/sky/engine/core/core.gni
+++ b/engine/src/flutter/sky/engine/core/core.gni
@@ -48,8 +48,6 @@ sky_core_files = [
   "painting/CanvasGradient.h",
   "painting/CanvasImage.cpp",
   "painting/CanvasImage.h",
-  "painting/CanvasImageDecoder.cpp",
-  "painting/CanvasImageDecoder.h",
   "painting/CanvasPath.cpp",
   "painting/CanvasPath.h",
   "painting/ColorFilter.cpp",
@@ -61,7 +59,6 @@ sky_core_files = [
   "painting/DrawLooperLayerInfo.cpp",
   "painting/DrawLooperLayerInfo.h",
   "painting/FilterQuality.h",
-  "painting/ImageDecoderCallback.h",
   "painting/ImageShader.cpp",
   "painting/ImageShader.h",
   "painting/LayerDrawLooperBuilder.cpp",
@@ -72,6 +69,8 @@ sky_core_files = [
   "painting/Matrix.h",
   "painting/Offset.cpp",
   "painting/Offset.h",
+  "painting/painting.cc",
+  "painting/painting.h",
   "painting/Paint.cpp",
   "painting/Paint.h",
   "painting/PaintingStyle.h",
@@ -267,8 +266,6 @@ core_idl_files = get_path_info([
                                  "painting/DrawLooperLayerInfo.idl",
                                  "painting/Gradient.idl",
                                  "painting/Image.idl",
-                                 "painting/ImageDecoder.idl",
-                                 "painting/ImageDecoderCallback.idl",
                                  "painting/ImageShader.idl",
                                  "painting/LayerDrawLooperBuilder.idl",
                                  "painting/MaskFilter.idl",
@@ -287,6 +284,7 @@ core_dart_files = get_path_info([
                                   "dart/hooks.dart",
                                   "dart/natives.dart",
                                   "dart/lerp.dart",
+                                  "dart/painting.dart",
                                   "dart/text.dart",
                                   "dart/window.dart",
                                   "painting/Color.dart",
@@ -294,7 +292,6 @@ core_dart_files = get_path_info([
                                   "painting/DrawLooperLayerInfo.dart",
                                   "painting/FilterQuality.dart",
                                   "painting/Gradient.dart",
-                                  "painting/ImageDecoder.dart",
                                   "painting/ImageShader.dart",
                                   "painting/MaskFilter.dart",
                                   "painting/Offset.dart",
