--- a/engine/src/flutter/sky/unit/pubspec.yaml
+++ b/engine/src/flutter/sky/unit/pubspec.yaml
@@ -4,8 +4,11 @@ dependencies:
   sky_tools: any
   test: any
   quiver: any
+  flx: ^0.0.2
 dependency_overrides:
   material_design_icons:
     path: ../packages/material_design_icons
   flutter:
     path: ../packages/sky
+  flx:
+    path: ../packages/flx
