--- a/engine/src/flutter/sky/packages/updater/pubspec.yaml
+++ b/engine/src/flutter/sky/packages/updater/pubspec.yaml
@@ -4,11 +4,14 @@ description: The autoupdater for flutter
 homepage: http://flutter.io
 dependencies:
   mojo: 0.3.0
-  flutter: ">=0.0.3 <0.1.0"
+  flutter: 
+    '0.0.14'
   sky_services: ^0.0.40
   yaml: ^2.1.3
   path: ^1.3.0
   flx: 0.0.1
+  flutter_sprites:
+    '0.0.11'
 dependency_overrides:
   flutter:
     path: ../sky
