--- a/engine/src/flutter/examples/address_book/pubspec.yaml
+++ b/engine/src/flutter/examples/address_book/pubspec.yaml
@@ -1,6 +1,7 @@
 name: address_book
 dependencies:
-  flutter: ">=0.0.3 <0.1.0"
+  flutter: 
+    '0.0.14'
   sky_tools: any
 dependency_overrides:
   material_design_icons:
