--- a/engine/src/flutter/sky/packages/sky/pubspec.yaml
+++ b/engine/src/flutter/sky/packages/sky/pubspec.yaml
@@ -1,5 +1,5 @@
 name: flutter
-version: 0.0.13
+version: 0.0.14
 author: Flutter Authors <flutter-dev@googlegroups.com>
 description: A framework for writing Flutter applications
 homepage: http://flutter.io
@@ -9,8 +9,10 @@ dependencies:
   material_design_icons: '>=0.0.3 <0.1.0'
   mojo_sdk: 0.1.0
   newton: '>=0.1.4 <0.2.0'
-  sky_engine: 0.0.43
-  sky_services: 0.0.43
+  sky_engine: 
+    '0.0.44'
+  sky_services: 
+    '0.0.44'
   sky_tools: '>=0.0.28 <0.1.0'
   vector_math: '>=1.4.3 <2.0.0'
 environment:
