--- a/engine/src/flutter/.gitignore
+++ b/engine/src/flutter/.gitignore
@@ -68,3 +68,5 @@ Thumbs.db
 /mojo/common/dart/packages
 /sky/packages/**/packages
 /sky/packages/sky_services/lib/
+/sky/tools/pubspec_maintenance/packages/
+/sky/tools/pubspec_maintenance/pubspec.lock
