--- a/engine/src/flutter/examples/stocks/BUILD.gn
+++ b/engine/src/flutter/examples/stocks/BUILD.gn
@@ -6,7 +6,7 @@ import("//sky/build/sky_app.gni")
 
 sky_app("stocks") {
   main_dart = "lib/main.dart"
-  manifest = "sky.yaml"
+  manifest = "flutter.yaml"
 
   if (is_android) {
     apk_name = "Stocks"
