Marshal RRect using a DartConverter (as is done for Rect)
This improved running time of a Canvas.drawRRect benchmark by 40%

--- a/engine/src/flutter/sky/engine/core/core.gni
+++ b/engine/src/flutter/sky/engine/core/core.gni
@@ -272,7 +272,6 @@ core_idl_files = get_path_info([
                                  "painting/Path.idl",
                                  "painting/Picture.idl",
                                  "painting/PictureRecorder.idl",
-                                 "painting/RRect.idl",
                                  "painting/Shader.idl",
                                  "text/Paragraph.idl",
                                  "text/ParagraphBuilder.idl",
@@ -300,6 +299,7 @@ core_dart_files = get_path_info([
                                   "painting/PaintingStyle.dart",
                                   "painting/Point.dart",
                                   "painting/Rect.dart",
+                                  "painting/RRect.dart",
                                   "painting/RSTransform.dart",
                                   "painting/Size.dart",
                                   "painting/TransferMode.dart",
