--- a/engine/src/flutter/sky/packages/flx/pubspec.yaml
+++ b/engine/src/flutter/sky/packages/flx/pubspec.yaml
@@ -9,6 +9,7 @@ dependencies:
   yaml: ^2.1.3
   asn1lib: ^0.4.1
   cipher: ^0.7.1
+  crypto: ^0.9.1
   path: ^1.3.0
 environment:
   sdk: '>=1.12.0 <2.0.0'
