--- a/engine/src/flutter/examples/fitness/flutter.yaml
+++ b/engine/src/flutter/examples/fitness/flutter.yaml
@@ -1,6 +1,6 @@
 name: fitness
 version: 0.0.1
-update-url: http://localhost:9888/examples/fitness/
+update-url: http://localhost:9888/
 material-design-icons:
   - name: action/assessment
   - name: action/help
