--- a/engine/src/flutter/examples/stocks/flutter.yaml
+++ b/engine/src/flutter/examples/stocks/flutter.yaml
@@ -1,6 +1,6 @@
 name: stocks
 version: 0.0.2
-update-url: http://localhost:9888/examples/stocks/
+update-url: http://localhost:9888/
 material-design-icons:
   - name: action/account_balance
   - name: action/assessment
