--- a/engine/src/flutter/sky/engine/bindings/BUILD.gn
+++ b/engine/src/flutter/sky/engine/bindings/BUILD.gn
@@ -116,11 +116,11 @@ action("generate_snapshot_file") {
   ]
   inputs = [
     "//dart/runtime/tools/create_snapshot_file.py",
-    "snapshot.cc.tmpl",
+    "snapshot.c.tmpl",
     "$target_gen_dir/vm_isolate_snapshot.bin",
     "$target_gen_dir/isolate_snapshot.bin",
   ]
-  output = "$target_gen_dir/snapshot.cc"
+  output = "$target_gen_dir/snapshot.c"
   outputs = [
     output,
   ]
@@ -132,7 +132,7 @@ action("generate_snapshot_file") {
     "--input_bin",
     rebase_path("$target_gen_dir/isolate_snapshot.bin"),
     "--input_cc",
-    rebase_path("snapshot.cc.tmpl"),
+    rebase_path("snapshot.c.tmpl"),
     "--output",
     rebase_path(output),
   ]
@@ -171,7 +171,7 @@ action("generate_updater_snapshot_file") {
 
 source_set("snapshot_cc") {
   sources = [
-    "$target_gen_dir/snapshot.cc",
+    "$target_gen_dir/snapshot.c",
   ]
 
   deps = [
