--- a/engine/src/flutter/sky/packages/sky_engine/BUILD.gn
+++ b/engine/src/flutter/sky/packages/sky_engine/BUILD.gn
@@ -26,9 +26,14 @@ dart_pkg("sky_engine") {
     "//sky/engine/bindings",
   ]
 
+  service_isolate_dir = "//sky/engine/core/script/dart_service_isolate"
   sdk_ext_directory = "$root_gen_dir/sky/bindings"
   sdk_ext_files = [
     "//sky/engine/bindings/internals.dart",
+    "$service_isolate_dir/main.dart",
+    "$service_isolate_dir/loader.dart",
+    "$service_isolate_dir/resources.dart",
+    "$service_isolate_dir/server.dart",
   ]
   sdk_ext_mappings = [
     "dart:ui,dart_ui.dart",
