Update to use new MojoNative API

--- a/engine/src/flutter/sky/engine/bindings/BUILD.gn
+++ b/engine/src/flutter/sky/engine/bindings/BUILD.gn
@@ -21,8 +21,6 @@ source_set("bindings") {
     "exception_state_placeholder.h",
     "exception_state.cc",
     "exception_state.h",
-    "mojo_natives.cc",
-    "mojo_natives.h",
     "nullable.h",
     "scheduled_action.cc",
     "scheduled_action.h",
@@ -35,6 +33,7 @@ source_set("bindings") {
     "//dart/runtime:libdart",
     "//mojo/public/c/system",
     "//mojo/public/cpp/system",
+    "//mojo/public/platform/dart:mojo_internal_impl",
     "//sky/engine/core:prerequisites",
     "//sky/engine/platform:platform",
     "//sky/engine/tonic",
