--- a/engine/src/flutter/sky/packages/updater/pubspec.yaml
+++ b/engine/src/flutter/sky/packages/updater/pubspec.yaml
@@ -3,15 +3,10 @@ author: Flutter Authors <flutter-dev@googlegroups.com>
 description: The autoupdater for flutter
 homepage: http://flutter.io
 dependencies:
-  mojo: 0.3.0
-  flutter: 
-    '0.0.16'
-  sky_services: ^0.0.40
+  flutter: '0.0.18'
   yaml: ^2.1.3
   path: ^1.3.0
   flx: 0.0.1
-  flutter_sprites:
-    '0.0.13'
 dependency_overrides:
   flutter:
     path: ../sky
