Improve error handling in sky_snapshoter
Now we print a more sensible error message and exit with an error instead of
appearing to crash.

Fixes https://github.com/flutter/flutter/issues/53

--- a/engine/src/flutter/sky/BUILD.gn
+++ b/engine/src/flutter/sky/BUILD.gn
@@ -10,6 +10,7 @@ group("sky") {
     "//sky/engine/wtf:unittests($host_toolchain)",
     "//sky/packages",
     "//sky/shell",
+    "//sky/tools/sky_snapshot",
   ]
 
   if (is_android) {
