--- a/engine/src/flutter/sky/shell/BUILD.gn
+++ b/engine/src/flutter/sky/shell/BUILD.gn
@@ -67,8 +67,6 @@ source_set("common") {
     "ui/animator.h",
     "ui/engine.cc",
     "ui/engine.h",
-    "ui/input_event_converter.cc",
-    "ui/input_event_converter.h",
     "ui/internals.cc",
     "ui/internals.h",
     "ui/platform_impl.cc",
@@ -152,6 +150,7 @@ if (is_android) {
       "//sky/services/media:interfaces_java",
       "//sky/services/media:media_lib",
       "//sky/services/oknet",
+      "//sky/services/pointer:interfaces_java",
       "//sky/services/updater:interfaces_java",
       "//sky/services/vsync:interfaces_java",
       "//sky/services/vsync:vsync_lib",
