--- a/engine/src/flutter/sky/engine/public/sky/BUILD.gn
+++ b/engine/src/flutter/sky/engine/public/sky/BUILD.gn
@@ -12,6 +12,7 @@ source_set("sky") {
     "//sky/engine/core",
     "//sky/engine/platform",
     "//sky/engine/wtf",
+    "//sky/services/pointer:interfaces",
   ]
 
   configs += [
