Add a basic sky_shell.mojo
Currently sky_shell.mojo can't load any Flutter apps or draw to the screen, but
that will come in later patches.

--- a/engine/src/flutter/sky/BUILD.gn
+++ b/engine/src/flutter/sky/BUILD.gn
@@ -13,6 +13,10 @@ group("sky") {
     "//sky/tools/sky_snapshot($host_toolchain)",
   ]
 
+  if (is_linux || is_android) {
+    deps += [ "//sky/shell/platform/mojo" ]
+  }
+
   if (is_android) {
     deps += [ "//sky/services/activity" ]
   }
