--- a/engine/src/flutter/sky/packages/sky_engine/BUILD.gn
+++ b/engine/src/flutter/sky/packages/sky_engine/BUILD.gn
@@ -36,6 +36,6 @@ dart_pkg("sky_engine") {
   ]
   sdk_ext_mappings = [
     "dart:ui,dart_ui.dart",
-    "dart:ui_internals,internals.dart",
+    "dart:ui_internals,bindings/internals.dart",
   ]
 }
