Wire sky_shell.mojo up to native_viewport
After this patch, we can execute Dart code an create an X window. There's a
sketch of some graphics code, but it's not wired up yet.

--- a/engine/src/flutter/sky/services/engine/BUILD.gn
+++ b/engine/src/flutter/sky/services/engine/BUILD.gn
@@ -11,6 +11,7 @@ mojom("interfaces") {
   ]
 
   deps = [
-    "//sky/services/pointer:interfaces"
+    "//mojo/services/asset_bundle/interfaces",
+    "//sky/services/pointer:interfaces",
   ]
 }
