--- a/engine/src/flutter/sky/shell/platform/mojo/BUILD.gn
+++ b/engine/src/flutter/sky/shell/platform/mojo/BUILD.gn
@@ -9,10 +9,14 @@ mojo_native_application("mojo") {
   output_name = "sky_shell"
 
   sources = [
+    "content_handler_impl.cc",
+    "content_handler_impl.h",
     "main_mojo.cc",
     "platform_service_provider_mojo.cc",
     "platform_view_mojo.cc",
     "platform_view_mojo.h",
+    "sky_application_impl.cc",
+    "sky_application_impl.h",
   ]
 
   deps = [
@@ -25,15 +29,16 @@ mojo_native_application("mojo") {
     "//mojo/public/cpp/system",
     "//mojo/public/cpp/utility",
     "//mojo/public/interfaces/application",
+    "//mojo/services/asset_bundle/interfaces",
     "//mojo/services/content_handler/interfaces",
     "//mojo/services/gpu/interfaces",
     "//mojo/services/input_events/interfaces",
     "//mojo/services/navigation/interfaces",
     "//mojo/services/network/interfaces",
+    "//mojo/services/native_viewport/interfaces",
     "//mojo/services/service_registry/interfaces",
     "//mojo/services/surfaces/interfaces",
-    "//mojo/services/view_manager/cpp",
-    "//mojo/services/view_manager/interfaces",
+    "//mojo/services/ui/views/interfaces",
     "//services/asset_bundle:lib",
     "//services/sky/compositor",
     "//skia",
@@ -44,4 +49,11 @@ mojo_native_application("mojo") {
     "//third_party/icu",
     "//url",
   ]
+
+  if (is_android) {
+    ldflags = [
+      "-lGLESv2",
+      "-lEGL",
+    ]
+  }
 }
