--- a/engine/src/flutter/sky/packages/sky_services/BUILD.gn
+++ b/engine/src/flutter/sky/packages/sky_services/BUILD.gn
@@ -25,6 +25,8 @@ dart_pkg("sky_services") {
     ":copy_sky_services_license",
     "//sky/services/activity:interfaces",
     "//sky/services/media:interfaces",
+    "//sky/services/pointer:interfaces",
+    "//sky/services/raw_keyboard:interfaces",
     "//sky/services/updater:interfaces",
     "//sky/services/vsync:interfaces",
   ]
