--- a/engine/src/flutter/.gitignore
+++ b/engine/src/flutter/.gitignore
@@ -70,3 +70,5 @@ Thumbs.db
 /sky/packages/sky_services/lib/
 /sky/tools/pubspec_maintenance/packages/
 /sky/tools/pubspec_maintenance/pubspec.lock
+/mojo/dart/packages/**/packages/
+/mojo/dart/packages/**/pubspec.lock
