--- a/engine/src/flutter/sky/engine/bindings/BUILD.gn
+++ b/engine/src/flutter/sky/engine/bindings/BUILD.gn
@@ -2,6 +2,7 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
+import("//mojo/dart/packages/mojo/sdk_ext_sources.gni")
 import("//sky/engine/bindings/bindings.gni")
 import("//sky/engine/core/core.gni")
 
@@ -64,13 +65,11 @@ action("generate_snapshot_bin") {
   ]
   inputs = [
     "//dart/runtime/tools/create_snapshot_bin.py",
-    "//mojo/public/dart/mojo/sdk_ext/internal.dart",
-    "//mojo/public/dart/mojo/sdk_ext/src/handle_watcher.dart",
-    "//mojo/public/dart/mojo/sdk_ext/src/natives.dart",
-    "//mojo/public/dart/mojo/sdk_ext/src/timer_queue.dart",
     "//sky/engine/bindings/internals.dart",
     "snapshot.dart",
-  ]
+  ] + rebase_path(dart_mojo_internal_sdk_sources,
+                  "",
+                  "//mojo/dart/packages/mojo")
   vm_isolate_snapshot = "$target_gen_dir/vm_isolate_snapshot.bin"
   isolate_snapshot = "$target_gen_dir/isolate_snapshot.bin"
   outputs = [
@@ -79,7 +78,7 @@ action("generate_snapshot_bin") {
   ]
 
   dart_mojo_internal_path =
-      rebase_path("//mojo/public/dart/mojo/sdk_ext/internal.dart")
+      rebase_path("//mojo/dart/packages/mojo/sdk_ext/internal.dart")
   dart_ui_internals_path =
       rebase_path("//sky/engine/bindings/internals.dart")
   dart_ui_path = rebase_path("$bindings_output_dir/dart_ui.dart")
